crates/phynix-parse/tests/expr/snapshots/tests__expr__precedence__non_associativity_ternary.snap
---
source: crates/phynix-parse/tests/expr/precedence.rs
expression: diags
---
- code:
    Parse: UnexpectedToken
  message: ternary operator is non-associative; use parentheses to clarify precedence
  severity: Error
  span:
    start: 19
    end: 20
  labels: []
  notes: []
  help: ~
  fixes: []
