crates/phynix-parse/tests/expr/snapshots/tests__expr__precedence__precedence_instanceof_vs_arithmetic.snap
---
source: crates/phynix-parse/tests/expr/precedence.rs
expression: script
---
items:
  - ExprStmt:
      expr:
        BinaryOp:
          op: Mul
          left:
            VarRef:
              name: {}
          right:
            InstanceOf:
              expr:
                VarRef:
                  name: {}
              class:
                Qualified:
                  absolute: false
                  parts:
                    - {}
