crates/phynix-parse/tests/expr/snapshots/tests__expr__precedence__precedence_null_coalesce_vs_binary.snap
---
source: crates/phynix-parse/tests/expr/precedence.rs
expression: script
---
items:
  - ExprStmt:
      expr:
        NullCoalesce:
          left:
            BinaryOp:
              op: OrOr
              left:
                VarRef:
                  name: {}
              right:
                VarRef:
                  name: {}
          right:
            VarRef:
              name: {}
