crates/phynix-parse/tests/expr/snapshots/tests__expr__precedence__precedence_ternary_vs_null_coalesce.snap
---
source: crates/phynix-parse/tests/expr/precedence.rs
expression: script
---
items:
  - ExprStmt:
      expr:
        Ternary:
          condition:
            NullCoalesce:
              left:
                VarRef:
                  name: {}
              right:
                VarRef:
                  name: {}
          then_expr:
            VarRef:
              name: {}
          else_expr:
            VarRef:
              name: {}
