crates/phynix-parse/tests/expr/snapshots/tests__expr__precedence__right_associativity_null_coalesce.snap
---
source: crates/phynix-parse/tests/expr/precedence.rs
expression: script
---
items:
  - ExprStmt:
      expr:
        NullCoalesce:
          left:
            VarRef:
              name: {}
          right:
            NullCoalesce:
              left:
                VarRef:
                  name: {}
              right:
                VarRef:
                  name: {}
