crates/phynix-parse/tests/expr/snapshots/tests__expr__precedence__right_associativity_pow.snap
---
source: crates/phynix-parse/tests/expr/precedence.rs
expression: script
---
items:
  - ExprStmt:
      expr:
        BinaryOp:
          op: Pow
          left:
            VarRef:
              name: {}
          right:
            BinaryOp:
              op: Pow
              left:
                VarRef:
                  name: {}
              right:
                VarRef:
                  name: {}
